# pctation

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  format.bat  setup-linux.sh  setup-windows.bat
data/bios/: .gitignore
src/: CMakeLists.txt
src/bios/: CMakeLists.txt  bios.cpp  bios.hpp  functions.hpp
src/bus/: CMakeLists.txt  bus.cpp  bus.hpp
src/cpu/: CMakeLists.txt  cpu.cpp  cpu.hpp  cpu_instruction.cpp  cpu_instruction.hpp  cpu_opcode.hpp  gte.cpp  gte.hpp  instruction.cpp  instruction.hpp  interrupt.cpp  interrupt.hpp  opcode.hpp  opcodes.def
src/emulator/: CMakeLists.txt  emulator.cpp  emulator.hpp  settings.hpp
src/gpu/: CMakeLists.txt  colors.hpp  gpu.cpp  gpu.hpp
src/gui/: CMakeLists.txt  gui.cpp  gui.hpp
src/io/: CMakeLists.txt  cdrom.cpp  cdrom.hpp  cdrom_disk.cpp  cdrom_disk.hpp  cdrom_drive.cpp  cdrom_drive.hpp  digital_controller.cpp  digital_controller.hpp  joypad.cpp  joypad.hpp  timers.cpp  timers.hpp
src/main/: CMakeLists.txt  main.cpp
src/memory/: CMakeLists.txt  addressable.hpp  dma.cpp  dma.hpp  dma_channel.cpp  dma_channel.hpp  expansion.cpp  expansion.hpp  map.hpp  ram.cpp  ram.hpp  range.cpp  range.hpp
src/renderer/: CMakeLists.txt  buffer.hpp  rasterizer.cpp  rasterizer.hpp  renderer.cpp  renderer.hpp  screen_renderer.cpp  screen_renderer.hpp  shader.cpp  shader.hpp
src/renderer/shaders/: gouraud.fs.glsl  gouraud.vs.glsl  screen.fs.glsl  screen.vs.glsl
src/spu/: CMakeLists.txt  spu.cpp  spu.hpp
src/util/: CMakeLists.txt  bit_utils.hpp  fs.hpp  load_file.hpp  log.cpp  log.hpp  types.hpp  util.cpp
